# lambdachine

./: README.markdown  build-setup.sh  configure.in  lambdachine.cabal  sanitize_tabs_and_spaces.sh  stack.yaml
compiler/Lambdachine/: Id.hs  Options.hs  Serialise.hs  Utils.hs
compiler/Lambdachine/Ghc/: StgToBytecode.hs
compiler/Lambdachine/Grin/: Analyse.hs  Bytecode.hs  RegAlloc.hs  RegAllocLinearScan.hs
compiler/Lambdachine/Utils/: Pretty.hs
compiler/Lambdachine/Utils/Graph/: Colour.hs  Ops.hs
dead-code/Ghc/Api/: Pipeline.hs  Pipeline74.hs  V76.hs  V76Hsc.hs
dead-code/Lambdachine/: Core.hs  Eval.hs  Grin.hs  Stg.hs  Type.hs
dead-code/Lambdachine/Ghc/: CoreToBC.hs  CoreToBC.old.hs  CoreToGrin.hs  Pipeline.hs
dead-code/Lambdachine/Grin/: Eval.hs  RegAlloc2.hs
dead-code/Lambdachine/Interp/: Exec.hs  Html.hs  Trace.hs  Types.hs
experiments/old-sketches/: arch.h  bc.h  closure_types.h  def.h  info-tables.h  main.c  mm.c  opcodes.h  reference-bci.c  vm.c  vm.h
experiments/old-vm/: GC.c  HAMT.c  HashTable.c  HashTable.h  HeapInfo.c  InterpIR.c  InterpThreaded.c  Loader.c  Main.c  MiscClosures.c  OptimiseIR.c  PrintClosure.c  PrintIR.c  Record.c  ShadowHeap.c  Snapshot.c  StorageManager.c
experiments/old-vm/codegen/: AsmCodeGen.c  AsmTarget.h  AsmTarget_x64.h  Emit_x64.h  InterpAsm.c  MCode.c  MCode.h  RA_debug.h
experiments/old-vm/includes/: Arch.h  Bytecode.h  Common.h  InfoTables.h  Jit.h  Loader.h  Opcodes.h  StorageManager.h
lcc/: Main.hs
libraries/base/Control/: Monad.hs
libraries/base/Data/: Char.hs  Either.hs  List.hs  Maybe.hs  Tuple.hs
libraries/base/GHC/: Base.hs  Enum.hs  List.hs  Num.hs  Read.hs  Real.hs  ST.hs  Show.hs
libraries/base/Text/ParserCombinators/: ReadP.hs  ReadPrec.hs
libraries/base/Text/Read/: Lex.hs
libraries/containers/Data/: Map.hs  Set.hs
libraries/ghc-prim/GHC/: Tuple.hs
tests/Bc/: Bc0001.hs  Bc0003.hs  Bc0006.hs  EvalThunk.hs  Jit0007.hs  Rank2.hs  SumFromTo.hs
tests/Bench/: Append.hs  Primes.hs  SumSquare1.hs
tests/Bench/Fibon/Agum/: Main.hs
tests/Bench/Nofib/Spectral/: Boyer.hs  Circsim.hs  Constraints.hs  Lambda.hs
tests/Test/: Bench_Primes.hs
tests/Toys/: Ackermann.hs
tests/base/Simple/Data/: Char.hs
utils/: genopcodes.cc  print_config.c
vm/: arch.hh  assembler-debug.hh  assembler.cc  assembler.hh  bytecode.hh  common.hh  ir.cc  ir.hh  jit.cc  jit.hh  loader.hh  main.cc  memorymanager.cc  memorymanager.hh  miscclosures.hh  objects.cc  objects.hh  thread.hh  unittest.cc
vm/amd64/: fragment.cc
